--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "typescript": "^5.0.0",
     "vite": "^4.2.0"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@rollup/plugin-inject": "^5.0.3",
+    "memfs-browser": "^3.4.13000"
+  }
 }
