Massive terminal improvements

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.5.0",
+    "@types/sanitize-html": "^2.9.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "eslint": "^8.28.0",
@@ -31,6 +32,8 @@
   "type": "module",
   "dependencies": {
     "@rollup/plugin-inject": "^5.0.3",
-    "memfs-browser": "^3.4.13000"
+    "@types/node": "^20.1.7",
+    "memfs-browser": "^3.4.13000",
+    "sanitize-html": "^2.10.0"
   }
 }
