--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@rollup/plugin-inject": "^5.0.3",
     "@types/node": "^20.1.7",
     "memfs-browser": "^3.4.13000",
+    "ordinal": "^1.0.3",
     "sanitize-html": "^2.10.0"
   }
 }
