Add mdcat, better ls

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.5.0",
+    "@types/markdown-it": "^12.2.3",
     "@types/sanitize-html": "^2.9.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
@@ -33,6 +34,7 @@
   "dependencies": {
     "@rollup/plugin-inject": "^5.0.3",
     "@types/node": "^20.1.7",
+    "markdown-it": "^13.0.1",
     "memfs-browser": "^3.4.13000",
     "ordinal": "^1.0.3",
     "sanitize-html": "^2.10.0"
