--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/adapter-cloudflare": "^2.2.4",
     "@sveltejs/kit": "^1.5.0",
     "@types/markdown-it": "^12.2.3",
     "@types/sanitize-html": "^2.9.0",
