--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,9 +4,9 @@ stages: [ 🔨, 📦, ☸️ ]
 #  KUBE_DEPLOYMENT: homepage
 
 include:
-  - project: 'disappointment-industries/cicd-templates'
-    ref: main
-    file: 'container-multi.yml'
+#  - project: 'disappointment-industries/cicd-templates'
+#    ref: main
+#    file: 'container-multi.yml'
   - project: 'disappointment-industries/cicd-templates'
     ref: main
     file: 'node.yml'
