Add wrangler for easier local testing

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write ."
+    "format": "prettier --plugin-search-dir . --write .",
+    "wrangler": "vite build && wrangler pages dev .svelte-kit/cloudflare"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
@@ -29,7 +30,8 @@
     "svelte-check": "^3.4.3",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^4.4.2"
+    "vite": "^4.4.2",
+    "wrangler": "^3.10.1"
   },
   "type": "module",
   "dependencies": {
